--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="./travel_recommendation_contact.html" id="contact">Contact Us</a></li>
       <li><input type="text" id="conditionInput" placeholder="Enter a destination or keyword"> <i class="fas fa-search"></i> </li>
       <li><button id='btnSearch1'>Rechercher</button>
-      <li><button id='btnSearch'>Clear</button>
+      <li><button id='btnClear'>Clear</button>
       </li>
 
     </ul>
