--- a/travel_recommendation_contact.html
+++ b/travel_recommendation_contact.html
@@ -12,7 +12,7 @@
   <nav>
     <h1><i class="fas fa-plane"></i> TravelBlood</h1>
     <ul>
-      <li><a href="./travel_recommendation.html" id="home">Home </a></li>
+      <li><a href="./index.html" id="home">Home </a></li>
       <li><a href="./travel_recommendation_about.html" id="contact">About Us</a></li <li><a
         href="./travel_recommendation_contact.html" id="contact">Contact Us</a></li>
       </li>
